cycronet-build/src/cronet_bindings_linux.rs

pub type Cronet_RequestFinishedInfoPtr = *mut Cronet_RequestFinishedInfo;
pub const Cronet_RESULT_Cronet_RESULT_SUCCESS: Cronet_RESULT = 0;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT: Cronet_RESULT = -100;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST: Cronet_RESULT =
    -101;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN: Cronet_RESULT = -102;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME: Cronet_RESULT = -103;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD: Cronet_RESULT = -104;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER: Cronet_RESULT = -105;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE: Cronet_RESULT = -200;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE: Cronet_RESULT = -201;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD:
    Cronet_RESULT = -202;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED: Cronet_RESULT = -203;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED: Cronet_RESULT = -204;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED: Cronet_RESULT = -205;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED: Cronet_RESULT =
    -206;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED: Cronet_RESULT = -207;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_REDIRECT: Cronet_RESULT = -208;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_READ: Cronet_RESULT = -209;
pub const Cronet_RESULT_Cronet_RESULT_ILLEGAL_STATE_READ_FAILED: Cronet_RESULT = -210;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER: Cronet_RESULT = -300;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_HOSTNAME: Cronet_RESULT = -301;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_SHA256_PINS: Cronet_RESULT = -302;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE: Cronet_RESULT = -303;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_ENGINE: Cronet_RESULT = -304;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_URL: Cronet_RESULT = -305;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_CALLBACK: Cronet_RESULT = -306;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_EXECUTOR: Cronet_RESULT = -307;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_METHOD: Cronet_RESULT = -308;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_HEADER_NAME: Cronet_RESULT = -309;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_HEADER_VALUE: Cronet_RESULT = -310;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_PARAMS: Cronet_RESULT = -311;
pub const Cronet_RESULT_Cronet_RESULT_NULL_POINTER_REQUEST_FINISHED_INFO_LISTENER_EXECUTOR:
    Cronet_RESULT = -312;
pub type Cronet_RESULT = ::std::os::raw::c_int;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_CALLBACK: Cronet_Error_ERROR_CODE =
    0;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_HOSTNAME_NOT_RESOLVED:
    Cronet_Error_ERROR_CODE = 1;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_INTERNET_DISCONNECTED:
    Cronet_Error_ERROR_CODE = 2;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_NETWORK_CHANGED:
    Cronet_Error_ERROR_CODE = 3;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_TIMED_OUT: Cronet_Error_ERROR_CODE =
    4;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_CONNECTION_CLOSED:
    Cronet_Error_ERROR_CODE = 5;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_CONNECTION_TIMED_OUT:
    Cronet_Error_ERROR_CODE = 6;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_CONNECTION_REFUSED:
    Cronet_Error_ERROR_CODE = 7;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_CONNECTION_RESET:
    Cronet_Error_ERROR_CODE = 8;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_ADDRESS_UNREACHABLE:
    Cronet_Error_ERROR_CODE = 9;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_QUIC_PROTOCOL_FAILED:
    Cronet_Error_ERROR_CODE = 10;
pub const Cronet_Error_ERROR_CODE_Cronet_Error_ERROR_CODE_ERROR_OTHER: Cronet_Error_ERROR_CODE = 11;
pub type Cronet_Error_ERROR_CODE = ::std::os::raw::c_uint;
pub const Cronet_EngineParams_HTTP_CACHE_MODE_Cronet_EngineParams_HTTP_CACHE_MODE_DISABLED:
    Cronet_EngineParams_HTTP_CACHE_MODE = 0;
pub const Cronet_EngineParams_HTTP_CACHE_MODE_Cronet_EngineParams_HTTP_CACHE_MODE_IN_MEMORY:
    Cronet_EngineParams_HTTP_CACHE_MODE = 1;
pub const Cronet_EngineParams_HTTP_CACHE_MODE_Cronet_EngineParams_HTTP_CACHE_MODE_DISK_NO_HTTP:
    Cronet_EngineParams_HTTP_CACHE_MODE = 2;
pub const Cronet_EngineParams_HTTP_CACHE_MODE_Cronet_EngineParams_HTTP_CACHE_MODE_DISK:
    Cronet_EngineParams_HTTP_CACHE_MODE = 3;
pub type Cronet_EngineParams_HTTP_CACHE_MODE = ::std::os::raw::c_uint;
pub const Cronet_UrlRequestParams_REQUEST_PRIORITY_Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_IDLE : Cronet_UrlRequestParams_REQUEST_PRIORITY = 0 ;
pub const Cronet_UrlRequestParams_REQUEST_PRIORITY_Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_LOWEST : Cronet_UrlRequestParams_REQUEST_PRIORITY = 1 ;
pub const Cronet_UrlRequestParams_REQUEST_PRIORITY_Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_LOW : Cronet_UrlRequestParams_REQUEST_PRIORITY = 2 ;
pub const Cronet_UrlRequestParams_REQUEST_PRIORITY_Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_MEDIUM : Cronet_UrlRequestParams_REQUEST_PRIORITY = 3 ;
pub const Cronet_UrlRequestParams_REQUEST_PRIORITY_Cronet_UrlRequestParams_REQUEST_PRIORITY_REQUEST_PRIORITY_HIGHEST : Cronet_UrlRequestParams_REQUEST_PRIORITY = 4 ;
pub type Cronet_UrlRequestParams_REQUEST_PRIORITY = ::std::os::raw::c_uint;
pub const Cronet_UrlRequestParams_IDEMPOTENCY_Cronet_UrlRequestParams_IDEMPOTENCY_DEFAULT_IDEMPOTENCY : Cronet_UrlRequestParams_IDEMPOTENCY = 0 ;
pub const Cronet_UrlRequestParams_IDEMPOTENCY_Cronet_UrlRequestParams_IDEMPOTENCY_IDEMPOTENT:
    Cronet_UrlRequestParams_IDEMPOTENCY = 1;
pub const Cronet_UrlRequestParams_IDEMPOTENCY_Cronet_UrlRequestParams_IDEMPOTENCY_NOT_IDEMPOTENT:
    Cronet_UrlRequestParams_IDEMPOTENCY = 2;
pub type Cronet_UrlRequestParams_IDEMPOTENCY = ::std::os::raw::c_uint;
pub const Cronet_RequestFinishedInfo_FINISHED_REASON_Cronet_RequestFinishedInfo_FINISHED_REASON_SUCCEEDED : Cronet_RequestFinishedInfo_FINISHED_REASON = 0 ;
pub const Cronet_RequestFinishedInfo_FINISHED_REASON_Cronet_RequestFinishedInfo_FINISHED_REASON_FAILED : Cronet_RequestFinishedInfo_FINISHED_REASON = 1 ;
pub const Cronet_RequestFinishedInfo_FINISHED_REASON_Cronet_RequestFinishedInfo_FINISHED_REASON_CANCELED : Cronet_RequestFinishedInfo_FINISHED_REASON = 2 ;
pub type Cronet_RequestFinishedInfo_FINISHED_REASON = ::std::os::raw::c_uint;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_INVALID:
    Cronet_UrlRequestStatusListener_Status = -1;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_IDLE:
    Cronet_UrlRequestStatusListener_Status = 0;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_WAITING_FOR_STALLED_SOCKET_POOL : Cronet_UrlRequestStatusListener_Status = 1 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_WAITING_FOR_AVAILABLE_SOCKET : Cronet_UrlRequestStatusListener_Status = 2 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_WAITING_FOR_DELEGATE : Cronet_UrlRequestStatusListener_Status = 3 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_WAITING_FOR_CACHE : Cronet_UrlRequestStatusListener_Status = 4 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_DOWNLOADING_PAC_FILE : Cronet_UrlRequestStatusListener_Status = 5 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_RESOLVING_PROXY_FOR_URL : Cronet_UrlRequestStatusListener_Status = 6 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_RESOLVING_HOST_IN_PAC_FILE : Cronet_UrlRequestStatusListener_Status = 7 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_ESTABLISHING_PROXY_TUNNEL : Cronet_UrlRequestStatusListener_Status = 8 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_RESOLVING_HOST : Cronet_UrlRequestStatusListener_Status = 9 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_CONNECTING : Cronet_UrlRequestStatusListener_Status = 10 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_SSL_HANDSHAKE : Cronet_UrlRequestStatusListener_Status = 11 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_SENDING_REQUEST : Cronet_UrlRequestStatusListener_Status = 12 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_WAITING_FOR_RESPONSE : Cronet_UrlRequestStatusListener_Status = 13 ;
pub const Cronet_UrlRequestStatusListener_Status_Cronet_UrlRequestStatusListener_Status_READING_RESPONSE : Cronet_UrlRequestStatusListener_Status = 14 ;
pub type Cronet_UrlRequestStatusListener_Status = ::std::os::raw::c_int;
extern "C" {
    pub fn Cronet_Buffer_Create() -> Cronet_BufferPtr;
}
extern "C" {
    pub fn Cronet_Buffer_Destroy(self_: Cronet_BufferPtr);
}
extern "C" {
    pub fn Cronet_Buffer_SetClientContext(
        self_: Cronet_BufferPtr,
        client_context: Cronet_ClientContext,
    );
}
extern "C" {
    pub fn Cronet_Buffer_GetClientContext(self_: Cronet_BufferPtr) -> Cronet_ClientContext;
}
extern "C" {
    pub fn Cronet_Buffer_InitWithDataAndCallback(
        self_: Cronet_BufferPtr,
        data: Cronet_RawDataPtr,
        size: u64,
        callback: Cronet_BufferCallbackPtr,
    );
}
extern "C" {
    pub fn Cronet_Buffer_InitWithAlloc(self_: Cronet_BufferPtr, size: u64);
}
extern "C" {
    pub fn Cronet_Buffer_GetSize(self_: Cronet_BufferPtr) -> u64;
}
extern "C" {
    pub fn Cronet_Buffer_GetData(self_: Cronet_BufferPtr) -> Cronet_RawDataPtr;
}
pub type Cronet_Buffer_InitWithDataAndCallbackFunc = ::std::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_BufferPtr,
        data: Cronet_RawDataPtr,
        size: u64,
        callback: Cronet_BufferCallbackPtr,
    ),
>;
pub type Cronet_Buffer_InitWithAllocFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr, size: u64)>;
pub type Cronet_Buffer_GetSizeFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr) -> u64>;
pub type Cronet_Buffer_GetDataFunc =
    ::std::option::Option<unsafe extern "C" fn(self_: Cronet_BufferPtr) -> Cronet_RawDataPtr>;
extern "C" {
    pub fn Cronet_Buffer_CreateWith(
        InitWithDataAndCallbackFunc: Cronet_Buffer_InitWithDataAndCallbackFunc,
        InitWithAllocFunc: Cronet_Buffer_InitWithAllocFunc,
        GetSizeFunc: Cronet_Buffer_GetSizeFunc,
        GetDataFunc: Cronet_Buffer_GetDataFunc,
    ) -> Cronet_BufferPtr;
}
extern "C" {
    pub fn Cronet_BufferCallback_Destroy(self_: Cronet_BufferCallbackPtr);
}
extern "C" {
    pub fn Cronet_BufferCallback_SetClientContext(
        self_: Cronet_BufferCallbackPtr,
        client_context: Cronet_ClientContext,
    );
}
extern "C" {
    pub fn Cronet_BufferCallback_GetClientContext(
        self_: Cronet_BufferCallbackPtr,
    ) -> Cronet_ClientContext;
}
extern "C" {
    pub fn Cronet_BufferCallback_OnDestroy(
        self_: Cronet_BufferCallbackPtr,
        buffer: Cronet_BufferPtr,
    );
}
